--- a/BashkiriaBase/BashkiriaBase.csproj
+++ b/BashkiriaBase/BashkiriaBase.csproj
@@ -64,6 +64,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Pages\ExecutorPage.xaml.cs">
+      <DependentUpon>ExecutorPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\SubprogramPage.xaml.cs">
+      <DependentUpon>SubprogramPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Registration.xaml.cs">
       <DependentUpon>Registration.xaml</DependentUpon>
     </Compile>
@@ -113,6 +119,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Pages\ExecutorPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\SubprogramPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Registration.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -167,6 +181,7 @@
       <DependentUpon>BashkiriaModel.edmx</DependentUpon>
       <LastGenOutput>BashkiriaModel.cs</LastGenOutput>
     </Content>
+    <Resource Include="logo.png" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
