--- a/BashkiriaBase/BashkiriaBase.csproj
+++ b/BashkiriaBase/BashkiriaBase.csproj
@@ -64,11 +64,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Pages\ExecutorPage.xaml.cs">
-      <DependentUpon>ExecutorPage.xaml</DependentUpon>
+    <Compile Include="Pages\ExecutorsPage.xaml.cs">
+      <DependentUpon>ExecutorsPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\SubprogramPage.xaml.cs">
-      <DependentUpon>SubprogramPage.xaml</DependentUpon>
+    <Compile Include="Pages\ProgramsPage.xaml.cs">
+      <DependentUpon>ProgramsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\SubprogramsPage.xaml.cs">
+      <DependentUpon>SubprogramsPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Registration.xaml.cs">
       <DependentUpon>Registration.xaml</DependentUpon>
@@ -112,22 +115,27 @@
     <Compile Include="Data\subprograms.cs">
       <DependentUpon>BashkiriaModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Data\sysdiagrams.cs">
-      <DependentUpon>BashkiriaModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Pages\ExecutorPage.xaml">
+    <Page Include="Pages\ExecutorsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\SubprogramPage.xaml">
+    <Page Include="Pages\ProgramsPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\SubprogramsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Registration.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\Styles.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
